--- a/Phylogenetics/4.2.1_tree_building.md
+++ b/Phylogenetics/4.2.1_tree_building.md
@@ -1,6 +1,19 @@
 # Tree Building and Phylogenetic Analysis
 
-## Introduction
+## Contents
+
+* [4.2.1: Tree building](#4.2.1-tree-building)
+	+ [4.2.1.1: Preparation](#4.2.1.1-preparation)
+	+ [4.2.1.2: Alignment](#4.2.1.2-alignment)
+	+ [4.2.1.3: Model selection](#4.2.1.3-model-selection)
+	+ [4.2.1.4: Tree building](#4.2.1.4-tree-building)
+	+ [4.2.1.5: Tree visualisation](#4.2.1.5-tree-visualisation)
+	+ [4.2.1.6: Extracting metadata](#4.2.1.6-extracting-metadata)
+	+ [4.2.1.7: Annotating the tree](#4.2.1.7-annotating-the-tree)
+	+ [4.2.1.8: Additional activity: Extracting alternate metadata](#4.2.1.8-additional-activity-extracting-alternate-metadata)
+
+
+## 4.2.1: Tree building
 
 In this practical we will be using Omicron SARS-CoV-2 sequences. Due to time constraints, we will be using a subset of sequences (trees can take a very long time to run if there are a lot of sequences!). A representative set of sequences from multiple countries has been selected.
 
@@ -8,13 +21,13 @@ We will be analysing and interpreting best fitting substitution models, bootstra
 
 You will be using the terminal for some of this, but navigating to the relevant directory with ```cd``` is the only command you'll need to remember - any other new commands will be detailed here. 
 
-## Preparation
+## 4.2.1.1: Preparation
 
 Start by making a folder for the analysis. Make sure this is somewhere easy to navigate to in the terminal! 
 
 You'll then need to copy the fasta file `omicron_subset_countries.fasta` we'll use for this practical from the `~/Phylogenetics` folder. You can do this manually or practice your command line skills! 
 
-## Alignment
+## 4.2.1.2: Alignment
 
 To make trees, sequences first need to be aligned! We will do this using mafft.
 
@@ -29,7 +42,7 @@ It's generally a good idea to take a quick manual look at the alignment file bef
 **How many sequences does this fasta file contain?**
 Hint: You can do `ctrl+f` to search the file, and search for the `>` character, of which each will denote a sequence. The number of `>`'s should display in the search bar. 
 
-## Model selection
+## 4.2.1.3: Model selection
 
 Finding the substitution model that best fits the data is very important. There are various tools to estimate the best substitution model but for now, we're going to use the inbuilt modeltest function in IQTREE.
 
@@ -67,7 +80,7 @@ Hint: This will be on the terminal screen, you may have to scroll up a little to
 
 **What do the parameters of the best fitting model mean?**
 
-## Tree building
+## 4.2.1.4: Tree building
 
 Now we know the best fitting model, we can make our tree!
 
@@ -78,7 +91,7 @@ This command means we are building this tree with 1000 ultrafast bootstrap repli
 You'll notice a lot of new files appear in your directory. The ones we're most interested in are the `.contree` file, which we'll use to visualise our tree, and the `.log` file which contains all the information that appeared on the terminal window.
 
 
-## Tree visualisation
+## 4.2.1.5: Tree visualisation
 
 Now you've built a tree, it's time to visualise it. We'll be using FigTree. FigTree is designed as a graphical viewer of phylogenetic trees and as a program for producing publication-ready figures. It can be downloaded from: http://tree.bio.ed.ac.uk/software/figtree/ 
 
@@ -109,7 +122,7 @@ This will remove any bootstrap values less than 90.
 Spend some time now playing about with the settings in FigTree to make an aesthetically pleasing tree! Make sure to keep it open when you're done, as we'll be going back to this.
 
 
-## Extracting metadata
+## 4.2.1.6: Extracting metadata
 
 We can add additional information to our tree. Sometimes the sequence IDs contain useful information that we want to extract. 
 
@@ -150,7 +163,7 @@ Replacing the PATH_TO_DIRECTORY with the full file path to your analysis directo
 
 If we check in our directory, we should now see the `.txt` file!
 
-## Annotating the tree
+## 4.2.1.7: Annotating the tree
 
 If we go back to our FigTree tree, we can now annotate it with the metadata file we just created! We do this by going to File->Import annotations and selecting the txt file we just made. 
 
@@ -162,7 +175,7 @@ When you've finalised your tree, you can export it by File->Export X where X is 
 
 Alternatively, you can try to annotate by different metadata!
 
-## Additional activity: Extracting alternate metadata
+## 4.2.1.7: Additional activity: Extracting alternate metadata
 
 Go back to RStudio and try to extract some other useful metadata!
 
