Contents and update practical

--- a/Phylogenetics/4.2.2_further_phylo.md
+++ b/Phylogenetics/4.2.2_further_phylo.md
@@ -1,13 +1,23 @@
 # Further Phylodynamics and Phylogeography
 
-## Introduction
+## Contents
+
+* [4.2.2: Further Phylodynamics and Phylogeography](#4.2.1-tree-building)
+	+ [4.2.2.1: Tempest](#4.2.1.1-preparation)
+	+ [4.2.2.2: BEAST](#4.2.1.3-model-selection)
+	+ [4.2.2.3: SPREAD](#4.2.1.4-tree-building)
+	+ [4.2.1.5: Tree visualisation](#4.2.1.5-tree-visualisation)
+	+ [4.2.1.6: Extracting metadata](#4.2.1.6-extracting-metadata)
+	+ [4.2.1.7: Annotating the tree](#4.2.1.7-annotating-the-tree)
+	
+## 4.2.2: Further Phylodynamics and Phylogeography
 
 In this practical you will be briefly introduced to further phylodynamic and phylogeographic analyses that can be undertaken. This is in no way a complete tutorial, and should you want to recreate the analyses viewed here you should complete the tutorials available at https://beast.community/index.html. Instead, you will be introduced to some initial concepts, and the end results you can expect to achieve.
 
 For this practical we will be using premade datasets and trees from rabies virus sequences from the Cosmopolitan AF1a_C1 lineage. 
 
 
-## Tempest
+## 4.2.2.1: Tempest
 
 Once you have your tree and the collection date associated with each sequence, you can do some further analysis! We first want to check if the data shows a temporal signal. We do this using Tempest, which can be downloaded from http://tree.bio.ed.ac.uk/software/tempest/ 
 
@@ -43,11 +53,11 @@ Tempest can also give initial predictions of the age of the root (the time the M
 **Do you think this data shows good temporal signal? Why, and what evidence backs this up?**
 
 
-## BEAST
+## 4.2.2.2: BEAST
 
 Setting up, running and interpreting BEAST is beyond the scope of this tutorial, as it can be very time consuming! For the purpose of this tutorial, we are going to assume we have completed our BEAST runs, found the most likely population and clock models, and that our run has 'converged' - meaning it is complete! Getting to grips with BEAST can take some time, so try to follow the online tutorials when you have a chance.
 
-## SPREAD
+## 4.2.2.3: SPREAD
 
 BEAST runs can incorporate not only temporal information (dates) but also spatial information (coordinates). This allows us to assess the geographic spread over time, and estimate the origins of clusters and outbreaks.
 
