--- a/Phylogenetics/4.2.3_group_practical_phylo.md
+++ b/Phylogenetics/4.2.3_group_practical_phylo.md
@@ -1,6 +1,6 @@
 # Phylogenetics Group Project
 
-## Introduction
+## 4.2.3: Phylogenetics Group Practical
 
 Time to test out what you've learnt on a new dataset! 
 
@@ -26,7 +26,9 @@ Extract the dates from the sequence IDs and make a txt file with the date for ea
 Import the tree and dates into Tempest.
 Hint: The date format may be different to last time!
 
-1. Does this dataset show a temporal signal? What evidance do you have for/against this?
+1. Does this dataset show a temporal signal? What evidence do you have for/against this? Why do you think this could be?
 2. What is the estimated date of the MRCA?
 3. What is the estimated evolutionary rate?
 4. Which sequences show greater divergence than expected? Which show less divergence? 
+5. Can we trust these values we've answered here? 
+6. What could we try to fix these issues? 
