Specify application locations, number questions

--- a/Phylogenetics/4.2.1_tree_building.md
+++ b/Phylogenetics/4.2.1_tree_building.md
@@ -39,7 +39,8 @@ This will create the file `omicron_subset_countries_aligned.fasta` in your folde
 
 It's generally a good idea to take a quick manual look at the alignment file before proceeding. You can open the fasta file in an alignment viewer for a full look, or open in a text editor for a quick look. For now, just open the file in a text editor.
 
-**How many sequences does this fasta file contain?**
+1. How many sequences does this fasta file contain?
+
 Hint: You can do `ctrl+f` to search the file, and search for the `>` character, of which each will denote a sequence. The number of `>`'s should display in the search bar. 
 
 ## 4.2.1.3: Model selection
@@ -75,10 +76,10 @@ To start with, we'll run the modeltest without running a tree.
 In the terminal, type `iqtree -s omicron_subset_countries_aligned.fasta -m TESTONLY` 
 
 
-**What is the best fitting model?**
+2. What is the best fitting model?
 Hint: This will be on the terminal screen, you may have to scroll up a little to under where each model was tested.
 
-**What do the parameters of the best fitting model mean?**
+3. What do the parameters of the best fitting model mean?
 
 ## 4.2.1.4: Tree building
 
@@ -105,11 +106,11 @@ Your tree will appear on the screen! However, it needs a bit of manipulation to 
 
 Along the side tabs, go to Trees. Root the tree at the midpoint and order the nodes by increasing order.
 
-**What initial observations can you make from the tree topology?**
+4. What initial observations can you make from the tree topology?
 
 Now go to Node labels, and display the bootstrap values. 
 
-**What is the purpose of bootstrap values?**
+5. What is the purpose of bootstrap values?
 
 It often isn't useful to see ALL the bootstrap values - we just want to know which branches have strong support and which don't. Therefore, we can hide the lower values and only show values of interest. 
 
@@ -117,7 +118,7 @@ To do this, click `ctrl+f`. A search bar will open at the top of the figure. Sea
 
 This will remove any bootstrap values less than 90. 
 
-**Look at the bootstrap values on the tree now. What do they tell us?**
+6. Look at the bootstrap values on the tree now. What do they tell us?
 
 Spend some time now playing about with the settings in FigTree to make an aesthetically pleasing tree! Make sure to keep it open when you're done, as we'll be going back to this.
 
@@ -128,11 +129,11 @@ We can add additional information to our tree. Sometimes the sequence IDs contai
 
 Take a look at the format of the sequence IDs in your fasta file.
 
-**What information might we want to extract from the sequence IDs?**
+7. What information might we want to extract from the sequence IDs?
 
 To extract this information manually would take ages! Instead, we can write a pipeline in R to process this for us.
 
-Open RStudio. The next steps will all be done in there.
+Open RStudio. (`Applications->Development->Rstudio`). The next steps will all be done in there.
 
 If it isn't already, you'll need to install the library `seqinr`. You can do this by going to Tools-> Install Packages and entering `seqinr`. 
 
@@ -183,7 +184,7 @@ First, try extracting the year for each sequence.
 
 Most of the code will be the same as you ran before, but think about the element of the ID you want to extract! Hint: The working code will be at the end of this document if you need assistance!
 
-**Annotate your tree in FigTree with tips coloured by year**
+8. Annotate your tree in FigTree with tips coloured by year
 
 It might also be useful to colour tips by country of interest - e.g. colour sequences from the Philippines one colour, and other countries another colour. 
 
@@ -199,7 +200,7 @@ To do this, we need to find which entries do not say `Philippines`. For this we 
 
 Check table `m` to make sure this has changed, then save the file!
 
-**Annotate your tree in FigTree with tips colourd by PHL/Other**
+9. Annotate your tree in FigTree with tips colourd by PHL/Other
 
 Code for year colouring: 
 
