--- a/Phylogenetics/4.2.2_further_phylo.md
+++ b/Phylogenetics/4.2.2_further_phylo.md
@@ -25,7 +25,7 @@ Tempest needs a tree and a set of dates to run.
 
 Check the metadata file `~/Phylogenetics/AF1b_C1_dates.txt` and make a note of the format the dates are written in.
 
-Open tempest and, when prompted, select the rabies tree in the phylogenetics folder `~/Phylogenetics/AF1b_C1_aligned.fasta.contree`. 
+Open tempest by typing `~/Downloads/TempEst_v1.5.3/bin/tempest` into the terminal and, when prompted, select the rabies tree in the phylogenetics folder `~/Phylogenetics/AF1b_C1_aligned.fasta.contree`. 
 
 Click `import dates` and select the metadata file `~/Phylogenetics/AF1b_C1_dates.txt`.
 
@@ -42,15 +42,16 @@ Click the `tree` tab. You'll notice that some of the branches are coloured red a
 
 Using the information here, and highlighting the sequences of interest, figure out:
 
-**What do red branches mean?**
-**What do blue branches mean?**
+1. What do red branches mean?
+2. What do blue branches mean?
 
 Tempest can also give initial predictions of the age of the root (the time the MRCA of all the sequences occured) and the rate of evolution, in substitutions per sute per year. In the `root-to-tip` tab, try to figure out:
 
-**When was the MRCA of these sequences predicted to have been?**
-**What is the estimate of evolutionary rate?**
+3. When was the MRCA of these sequences predicted to have been?
+4. What is the estimate of evolutionary rate?
 
-**Do you think this data shows good temporal signal? Why, and what evidence backs this up?**
+5. Do you think this data shows good temporal signal? 
+    + Why, and what evidence backs this up?
 
 
 ## 4.2.2.2: BEAST
@@ -65,13 +66,14 @@ SPREAD is a program that helps us accomplish this. We will not be running spread
 
 SPREAD creates a `.kml` file, which we can open with Google Earth.
 
-Open Google Earth Pro and go to File->Open. Select the kml file `~/Phylogenetics/AF1b_C1.kml`. This should then open in Google Earth.
+Open Google Earth Pro (`Applications->Internet->Google Earth Pro`) and go to File->Open. Select the kml file `~/Phylogenetics/AF1b_C1.kml`. This should then open in Google Earth.
 
 Navigate to Tanzania, where you'll see a set of red lines. Near the top of the screen you should also see a time slider. Drag the time slider back to the start, and then press play (the little clock with the arrow). You should see a recreation of the spread of the lineage over time!
 
-**What year is the root estimated to be?**
-**When did the lineage spread to Pemba Island?**
-**Is there any evidence of long distance transmission? What could be explanations for this?**
+6. What year is the root estimated to be?
+7. When did the lineage spread to Pemba Island?
+8. Is there any evidence of long distance transmission? 
+    + What could be explanations for this?
 
 
 # Summary
