--- a/Phylogenetics/4.2.1a_tree_visualisation.md
+++ b/Phylogenetics/4.2.1a_tree_visualisation.md
@@ -15,16 +15,20 @@ For this first practical, we won't be working on the VM. Instead, we'll be using
 
 For reference, here are a few of the diagrams from the slides that might help you here!
 
-**Parts of a Tree**
+|**Parts of a Tree**|
+|:--------:|
 ![alt text](Figures/slide1.jpg) 
 
 **Monophylogeny**
+|:--------:|
 ![alt text](Figures/slide2.png) 
 
 **Rooting Trees**
+|:--------:|
 ![alt text](Figures/slide3.png) 
 
 **Types of Tree**
+|:--------:|
 ![alt text](Figures/slide4.png) 
 
 ## 4.2.1a.1 A Simple Tree
@@ -32,6 +36,7 @@ For reference, here are a few of the diagrams from the slides that might help yo
 We'll start off with a simple tree.
 
 Copy the image of the tree below into a word (or other appropriate) document. Using shapes and text boxes, annotate all of the following answers onto the tree in the word document. 
+|:--------:|
 ![alt text](Figures/figure1.png) 
 
 ### Task 1
@@ -54,6 +59,7 @@ From this tree, which is the most closely related species to Humans? Which is mo
 Now we've practiced on a simple tree, can we apply the same knowledge to a more complicated tree?
 
 Copy the image of the tree below into a word (or other appropriate) document. Using shapes and text boxes, annotate all of the following answers onto the tree in the word document. 
+|:--------:|
 ![alt text](Figures/figure2.png) 
 
 ### Task 3
