Update Tasks list

--- a/Phylogenetics/4.2.1b_tree_building.md
+++ b/Phylogenetics/4.2.1b_tree_building.md
@@ -19,30 +19,40 @@ In this practical we will be using Omicron SARS-CoV-2 sequences. Due to time con
 
 We will be analysing and interpreting best fitting substitution models, bootstrap values and finding the best ways to visualise trees. We will also be extracting useful metadata from sequence IDs and annotating this on to phylogenetic trees. 
 
-You will be using the terminal for some of this, but navigating to the relevant directory with ```cd``` is the only command you'll need to remember - any other new commands will be detailed here. 
-
 ## 4.2.1b.1: Preparation
 
-Start by making a folder for the analysis. Make sure this is somewhere easy to navigate to in the terminal! 
+Start by making a folder for the analysis in your home directory. Call this `Phylogenetics_analysis`. 
 
-You'll then need to copy the fasta file `omicron_subset_countries.fasta` we'll use for this practical from the `~/Phylogenetics` folder. You can do this manually or practice your command line skills! 
+You'll then need to copy the fasta file `omicron_subset_countries.fasta` we'll use for this practical from the `/home/manager/Phylogenetics` folder to the folder you just made. 
 
 ## 4.2.1b.2: Alignment
 
 To make trees, sequences first need to be aligned! We will do this using mafft.
 
-Open up the terminal and navigate to the directory you just made using `cd`. 
+Make sure you're in the `Phylogenetics_analysis` directory you just made.
 
+___
+
+### Task 1
 Write the command `mafft omicron_subset_countries.fasta > omicron_subset_countries_aligned.fasta` 
 
 This will create the file `omicron_subset_countries_aligned.fasta` in your folder - this contains the sequences from `omicron_subset_countries.fasta` aligned by the FFT-NS-2 algorithm.
 
-It's generally a good idea to take a quick manual look at the alignment file before proceeding. You can open the fasta file in an alignment viewer for a full look, or open in a text editor for a quick look. For now, just open the file in a text editor.
+___
 
-### Task 1
+### Task 2
+
+It's generally a good idea to take a quick manual look at the alignment file before proceeding. You can open the fasta file in an alignment viewer for a full look, or open in a text editor or terminal for a quick look. 
+
+
+For now, just check the first 20 lines of open the file using `head`. 
+
+___
+
+### Task 3
 How many sequences does this fasta file contain?
 
-Hint: You can do `ctrl+f` to search the file, and search for the `>` character, of which each will denote a sequence. The number of `>`'s should display in the search bar. 
+Hint: You can use `grep` to search the file, and search for the `>` character, of which each will denote a sequence.
 
 ## 4.2.1b.3: Model selection
 
@@ -56,10 +66,15 @@ https://www.phylo.org/
 https://www.hiv.lanl.gov/content/sequence/IQTREE/iqtree.html
 You can find many basic and advanced tutorials in http://www.iqtree.org/doc/
 
+___
+
+### Task 4
 
 In the terminal, make sure you're still in the correct directory.
 
 Type: `iqtree2 -h` to see all the command options for IQTREE, and note any that may be useful.
+
+___
 
 You may notice the `-m` argument to specify a model. You can run `-m TEST` when making a tree to find the best substitution model and then make a tree using that model. Alternatively, you can use `-m TESTONLY` to find the best fitting substitution model without making a tree.
 
@@ -74,38 +89,50 @@ Other important arguments we'll be using include:
 
 To start with, we'll run the modeltest without running a tree.
 
-### Task 2
+___
+
+### Task 5
 In the terminal, type `iqtree -s omicron_subset_countries_aligned.fasta -m TESTONLY` 
 
-What is the best fitting model?
+What is the best fitting model? Make a note of this!
 
 Hint: This will be on the terminal screen, you may have to scroll up a little to under where each model was tested.
 
-### Task 3
+___
+
+### Task 6
 What do the parameters of the best fitting model mean?
 
 ## 4.2.1b.4: Tree building
 
 Now we know the best fitting model, we can make our tree!
 
-### Task 4
+___
+
+### Task 7
 
 In the terminal write `iqtree -s omicron_subset_countries_aligned.fasta -m BEST_FITTING_MODEL -B 1000 -redo` replacing `BEST_FITTING_MODEL` with the model you found in your last step.
 
 This command means we are building this tree with 1000 ultrafast bootstrap replicates. The `-redo` argument is necessary to overwrite the files made in the last step and allow this to run.
 
-You'll notice a lot of new files appear in your directory. The ones we're most interested in are the `.contree` file, which we'll use to visualise our tree, and the `.log` file which contains all the information that appeared on the terminal window.
+___
+
+If you write `ls`, you'll notice a lot of new files appear in your directory. The ones we're most interested in are the `.contree` file, which we'll use to visualise our tree, and the `.log` file which contains all the information that appeared on the terminal window.
 
 
 ## 4.2.1b.5: Tree visualisation
 
 Now you've built a tree, it's time to visualise it. We'll be using FigTree. FigTree is designed as a graphical viewer of phylogenetic trees and as a program for producing publication-ready figures. It can be downloaded from: http://tree.bio.ed.ac.uk/software/figtree/ 
 
-### Task 5
+You'll need to have figtree installed on your own laptop for this part of the practical. As we can't transfer files to your own laptop from the VM, you won't be able to use the `.contree` file you just made. Instead, you'll need to download the one I made earlier from the GitHub page. 
 
-Type `figtree` in the terminal to open the program.
+___
 
-Click  File → Open → select the file `omicron_subset_countries_aligned.contree`
+### Task 8
+
+Open figtree. 
+
+Click  File → Open → select the file `omicron_subset_countries_aligned.contree` that you just downloaded.
 
 When prompted, enter `bootstrap` as the label name.
 
@@ -113,15 +140,21 @@ Your tree will appear on the screen! However, it needs a bit of manipulation to 
 
 Along the side tabs, go to Trees. Root the tree at the midpoint and order the nodes by increasing order.
 
-### Task 6
+___
+
+### Task 9
 What initial observations can you make from the tree topology?
 
-### Task 7
+___
+
+### Task 10
 Now go to Node labels, and display the bootstrap values. 
 
 What is the purpose of bootstrap values?
 
-### Task 8
+___
+
+### Task 11
 
 It often isn't useful to see ALL the bootstrap values - we just want to know which branches have strong support and which don't. Therefore, we can hide the lower values and only show values of interest. 
 
@@ -131,7 +164,7 @@ This will remove any bootstrap values less than 90.
 
 Look at the bootstrap values on the tree now. What do they tell us?
 
-### Task 9
+### Task 12
 
 Spend some time now playing about with the settings in FigTree to make an aesthetically pleasing tree! Make sure to keep it open when you're done, as we'll be going back to this.
 
@@ -140,9 +173,11 @@ Spend some time now playing about with the settings in FigTree to make an aesthe
 
 We can add additional information to our tree. Sometimes the sequence IDs contain useful information that we want to extract. 
 
-### Task 10
+___
 
-Take a look at the format of the sequence IDs in your fasta file.
+### Task 13
+
+Going back to the VM, use `grep` to take a look at the format of the sequence IDs in your fasta file.
 
 What information might we want to extract from the sequence IDs?
 
@@ -150,29 +185,37 @@ What information might we want to extract from the sequence IDs?
 
 To extract this information manually would take ages! Instead, we can write a pipeline in R to process this for us.
 
-### Task 11
+___
+
+### Task 14
 
 Open RStudio using https://vm1.mbldash.tk/ (this may differ for different VMs - the link will be given in the session). Sign in using your assigned user as your username and password e.g. user1
 
 You'll then need to run the command `.libPaths("/home/manager/R/x86_64-pc-linux-gnu-library/4.2")` to source the relevant R libraries
 
-### Task 12
+___
 
-You'll need to import your fasta file. This first involves knowing where it is. You can find this out using the command `file.choose()`. This will open a window where you can select your alignment file. The full path to this will appear in the console in R studio. 
+### Task 15
+
+You'll need to import your fasta file. This first involves knowing where it is. You can find this out using the command `file.choose()`. This will open a window where you can navigate your directories and select your alignment file. The full path to this will appear in the console in R studio. 
 
 To import and store your alignment in R, run:
 `alignment<-seqinr::read.alignment("PATH_TO_FILE", format = "fasta")` replacing the PATH_TO_FILE with the path you generated in the last step. 
 
 Running this command should result in an element called `alignment` appearing in the environment tab in Rstudio. 
 
-### Task 13
+___
+
+### Task 16
 We're now going to create a table listing the country for each sequence. First, we'll create a table with all the sequence IDs and an empty country column ready to fill with data:
 
 `m<-data.frame(ID = alignment$nam, country = NA)` 
 
 This table should now have appeared under the alignment in your environment tab! 
 
-### Task 14
+___
+
+### Task 17
 
 You should have seen from looking at the sequence IDs that the information in the ID is separated by `/`s, with the country being the first element. We can therefore write some code to split the ID by the `/` and extract the first element:
 
@@ -180,7 +223,9 @@ You should have seen from looking at the sequence IDs that the information in th
 
 If you click on table `m` in your environment tab, you should now see that the country column has been filled in! 
 
-### Task 15
+___
+
+### Task 18
 
 We now want to save this table in a form that can be used by FigTree to annotate our tree. This is tab delimited text. To save this:
 
@@ -190,19 +235,38 @@ Replacing the PATH_TO_DIRECTORY with the full file path to your analysis directo
 
 If we check in our directory, we should now see the `.txt` file!
 
+___
+
 ## 4.2.1b.7: Annotating the tree
 
-If we go back to our FigTree tree, we can now annotate it with the metadata file we just created! We do this by going to File->Import annotations and selecting the txt file we just made. 
+If we go back to our FigTree tree, we can now annotate it with the metadata file we just created! Again, we can't transfer the data from the VM to our own laptops, so we'll have to download the `.txt` file I made earlier from GitHub.
+
+___
+
+### Task 19
+
+Once you've downloaded the file from GitHub, import it to FigTree. We do this by going to File->Import annotations and selecting the txt file we just made. 
 
 We can now colour our tips by country! In the side tab, go to Tip labels and colour by country.
 
-### Task 16
+___
+
+### Task 20
+
+You can also colour branches according to your annotations. Go to Tree->Annotate Nodes from Tips and select `country` as the annotation. 
+
+Now, if you go to the Appearance tab, you can colour by country. 
+
+___
+
+### Task 21
 
 Again, play around until you have a tree you're happy with. 
 
 When you've finalised your tree, you can export it by File->Export X where X is the file type. 
 
 Alternatively, you can try to annotate by different metadata!
+
 
 ## 4.2.1b.7: Additional activity: Extracting alternate metadata
 
@@ -212,9 +276,15 @@ First, try extracting the year for each sequence.
 
 Most of the code will be the same as you ran before, but think about the element of the ID you want to extract! Hint: The working code will be at the end of this document if you need assistance!
 
-### Task 17
+___
 
-Annotate your tree in FigTree with tips coloured by year
+### Task 22
+
+Create and save a file for annotating by year in FigTree. 
+
+Annotate your tree in FigTree with tips coloured by year (you'll have to download the file from GitHub.)
+
+___
 
 It might also be useful to colour tips by country of interest - e.g. colour sequences from the Philippines one colour, and other countries another colour. 
 
@@ -230,9 +300,15 @@ To do this, we need to find which entries do not say `Philippines`. For this we 
 
 Check table `m` to make sure this has changed, then save the file!
 
-### Task 18
+___
 
-Annotate your tree in FigTree with tips colourd by PHL/Other
+### Task 23
+
+Create and save a file for annotating your tree in FigTree with tips colourd by PHL/Other
+
+Annotate your tree in FigTree with tips coloured by PHL/Other (you'll have to download the file from GitHub.)
+
+___
 
 Code for year colouring: 
 
